# oop-design-cpp

./: .gitignore  BUILD.md  CMakeLists.txt  DEVELOPER_GUIDE.md  README.md
.github/workflows/: classroom.yml
include/: Animal.h  Bird.h  Cat.h  Dog.h  Zoo.h
src/: Animal.cpp  Bird.cpp  Cat.cpp  Dog.cpp  Zoo.cpp  main.cpp
tests/: test_animals.cpp
